Update feed url, bring back feed tag in default layout

--- a/_data/navigation-social.yml
+++ b/_data/navigation-social.yml
@@ -17,5 +17,5 @@
   link: https://www.last.fm/user/akikoo
   name: akikoo
 - id: feed
-  link: https://www.akikoo.org/feed/
+  link: https://www.akikoo.org/feed.xml
   name: RSS
