--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -29,7 +29,7 @@
   url: http://kantor-group.eu/
   year: 2010 <span class="middot" aria-hidden="true">&middot;</span> Brussels
 - name: EN RD
-  description: Front-end architecture for European network for Rural Development, by European Commission\'s DG for Agriculture and Rural Development
+  description: Front-end architecture for European network for Rural Development, by European Commission's DG for Agriculture and Rural Development
   image: 2009-enrd-ec-europa-eu-s.png
   url: http://enrd.ec.europa.eu/
   year: 2010 <span class="middot" aria-hidden="true">&middot;</span> Brussels
@@ -39,7 +39,7 @@
   url: http://reseau-pwdr.be/
   year: 2009 <span class="middot" aria-hidden="true">&middot;</span> Brussels
 - name: Euratom Energy Research
-  description: New website for Energy Research Directorate of the European Commission\'s DG for Research and Innovation
+  description: New website for Energy Research Directorate of the European Commission's DG for Research and Innovation
   image: 2009-energy-research-s.png
   url: http://ec.europa.eu/research/energy/euratom/index_en.cfm
   year: 2009 <span class="middot" aria-hidden="true">&middot;</span> Brussels
