Update Projects page with a new example

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- name: Skatteverket
+  description: Two new E-services for non-residents and foreign companies registering in Sweden; starting up the new Scrum development team and facilitating the work
+  image: 2020-skatteverket-se-s.png
+  url: https://www.skatteverket.se/
+  year: 2020 <span class="middot" aria-hidden="true">&middot;</span> Malmö
 - name: Mobiam
   description: New track & trace service (MVP) by Sony Mobile Communications for customers in transportation and logistics industry
   image: 2019-mobiam-io-s.png
@@ -43,11 +48,6 @@
   image: 2009-energy-research-s.png
   url: http://ec.europa.eu/research/energy/euratom/index_en.cfm
   year: 2009 <span class="middot" aria-hidden="true">&middot;</span> Brussels
-- name: Belgacom Skynet
-  description: New front-end for one of the leading Belgian web portals for consumers and corporate customers
-  image: 2008-skynet-be-entertainment-s.png
-  url: http://www.skynet.be/fr
-  year: 2008 <span class="middot" aria-hidden="true">&middot;</span> Brussels
 - name: ECA booklet (pdf)
   description: Booklet design for European Cockpit Association, representing 38 000+ European pilots at EU level, in 37 European states
   image: 2007-eca-tna-booklet-s.png
