Add part seven of the article series about the places I've lived in

--- a/_data/navigation-places.yml
+++ b/_data/navigation-places.yml
@@ -16,3 +16,6 @@
 - city: Paris
   country: France
   link: /log/2021/04/26/places-where-I-have-lived-part-6-paris/
+- city: Brussels
+  country: Belgium
+  link: /log/2021/04/28/places-where-I-have-lived-part-7-brussels/
