Add part eight of the article series about the places I've lived in

--- a/_data/navigation-places.yml
+++ b/_data/navigation-places.yml
@@ -19,3 +19,6 @@
 - city: Brussels
   country: Belgium
   link: /log/2021/04/28/places-where-I-have-lived-part-7-brussels/
+- city: Copenhagen
+  country: Denmark
+  link: /log/2021/04/30/places-where-I-have-lived-part-8-copenhagen/
