Add part nine of the article series about the places I've lived in

--- a/_data/navigation-places.yml
+++ b/_data/navigation-places.yml
@@ -22,3 +22,6 @@
 - city: Copenhagen
   country: Denmark
   link: /log/2021/04/30/places-where-I-have-lived-part-8-copenhagen/
+- city: Malmö
+  country: Sweden
+  link: /log/2021/05/02/places-where-I-have-lived-part-9-malmo/
