--- a/_data/certifications.yml
+++ b/_data/certifications.yml
@@ -1,10 +1,10 @@
 - name: PSPO I
-  description: Professional Scrum Product Owner (PSPO I)
+  description: Professional Scrum Product Owner
   image: pspoi.svg
   url: https://www.scrum.org/user/405331
   year: 2021 <span class="middot" aria-hidden="true">&middot;</span> scrum.org
 - name: PSM I
-  description: Professional Scrum Master (PSM I)
+  description: Professional Scrum Master
   image: psmi.svg
   url: https://www.scrum.org/user/405331
   year: 2018 <span class="middot" aria-hidden="true">&middot;</span> scrum.org
