Update Agile Kata Pro Foundation certification badge

--- a/_data/certifications.yml
+++ b/_data/certifications.yml
@@ -5,7 +5,7 @@
   year: 2024 <span class="middot" aria-hidden="true">&middot;</span> Scaled Agile, Inc.
 - name: AKP I
   description: Agile Kata Pro
-  image: badge-akpi.png
+  image: badge-akpfoundation.png
   url: https://www.agilekata.pro/certification
   year: 2024 <span class="middot" aria-hidden="true">&middot;</span> agilekata.pro
 - name: Elephant Carpaccio
