Update the Agile Kata Pro certification name to Foundation

--- a/_data/certifications.yml
+++ b/_data/certifications.yml
@@ -3,7 +3,7 @@
   image: badge-ssm.svg
   url: https://www.credly.com/badges/c24cb069-24aa-48e5-a301-a0d51b9e7152/public_url
   year: 2024 <span class="middot" aria-hidden="true">&middot;</span> Scaled Agile, Inc.
-- name: AKP I
+- name: AKP Foundation
   description: Agile Kata Pro
   image: badge-akpfoundation.png
   url: https://www.agilekata.pro/certification
