Adapt project thumbnails in portfolio

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
 - name: Trygg-Hansa
   description: Helping several distributed international teams effectively deliver features and improvements for insurance products and services.
-  image: 2025-trygg-hansa-se-s.png
+  image: 2025-trygg-hansa-se-s.jpg
   url: https://www.trygghansa.se/
   year: 2025 <span class="middot" aria-hidden="true">&middot;</span> Malmö
 - name: Skatteverket
